--- a/WallConveyorSupports.uplugin
+++ b/WallConveyorSupports.uplugin
@@ -1,30 +1,30 @@
 {
-	"FileVersion": 3,
-	"Version": 1,
-	"VersionName": "1.2.1",
-	"SemVersion": "1.2.1",
-	"FriendlyName": "Wall Conveyor Supports",
-	"Description": "Additional variants of the wall conveyor support",
-	"Category": "Modding",
-	"CreatedBy": "Marcio Neves",
-	"CreatedByURL": "https://ficsit.app/user/27uDm1v7WoUoDX",
-	"DocsURL": "https://ficsit.app/mod/7wWzUM3qj9VCoT",
-	"MarketplaceURL": "",
-	"SupportURL": "",
-	"CanContainContent": true,
-	"IsBetaVersion": false,
-	"IsExperimentalVersion": false,
-	"Installed": false,
-	"Plugins": [
-		{
-			"Name": "SML",
-			"SemVersion": "^3.6.0",
-			"Enabled": true
-		},
-		{
-			"Name": "MarcioCommonLibs",
-			"SemVersion": "^1.2.3",
-			"Enabled": true
-		}
-	]
+  "FileVersion": 3,
+  "Version": 1,
+  "VersionName": "1.2.2",
+  "SemVersion": "1.2.2",
+  "FriendlyName": "Wall Conveyor Supports",
+  "Description": "Additional variants of the wall conveyor support",
+  "Category": "Modding",
+  "CreatedBy": "Marcio Neves",
+  "CreatedByURL": "https://ficsit.app/user/27uDm1v7WoUoDX",
+  "DocsURL": "https://ficsit.app/mod/WallConveyorSupports",
+  "MarketplaceURL": "",
+  "SupportURL": "",
+  "CanContainContent": true,
+  "IsBetaVersion": false,
+  "IsExperimentalVersion": false,
+  "Installed": false,
+  "Plugins": [
+    {
+      "Name": "SML",
+      "SemVersion": "^3.6.0",
+      "Enabled": true
+    },
+    {
+      "Name": "MarcioCommonLibs",
+      "SemVersion": "^1.2.5",
+      "Enabled": true
+    }
+  ]
 }
