--- a/WallConveyorSupports.uplugin
+++ b/WallConveyorSupports.uplugin
@@ -1,8 +1,9 @@
 {
   "FileVersion": 3,
   "Version": 1,
-  "VersionName": "1.2.2",
-  "SemVersion": "1.2.2",
+  "VersionName": "1.3.0",
+  "SemVersion": "1.3.0",
+  "GameVersion": ">=368883",
   "FriendlyName": "Wall Conveyor Supports",
   "Description": "Additional variants of the wall conveyor support",
   "Category": "Modding",
@@ -18,12 +19,12 @@
   "Plugins": [
     {
       "Name": "SML",
-      "SemVersion": "^3.7.0",
+      "SemVersion": "^3.8.0",
       "Enabled": true
     },
     {
       "Name": "MarcioCommonLibs",
-      "SemVersion": "^1.2.5",
+      "SemVersion": "^1.3.0",
       "Enabled": true
     }
   ]
